--- a/wp-plugin__oauth--gCAL/index.mdx
+++ b/wp-plugin__oauth--gCAL/index.mdx
@@ -12,7 +12,7 @@ desc:  "ACF oAuth Button for google Calendar"
 <div align="center">
 
 <div>
-<img src="https://svg-rewriter.sachinraja.workers.dev/?url=https%3A%2F%2Fcdn.jsdelivr.net%2Fnpm%2F%40mdi%2Fsvg%406.7.96%2Fsvg%2Fcalendar-month.svg&fill=%23FACC15&width=200px&height=200px" style="width:200px;"/>
+<img src="https://svg-rewriter.sachinraja.workers.dev/?url=https%3A%2F%2Fcdn.jsdelivr.net%2Fnpm%2F%40mdi%2Fsvg%406.7.96%2Fsvg%2Fcalendar-month.svg&fill=%23FACC15&width=200px&height=200px" style="width:200px;" />
 
 <h3 align="center">Google Calendar OAuth Button</h3>
 
@@ -212,8 +212,6 @@ Author Link: [https://github.com/IORoot](https://github.com/IORoot)
 
 ##  8. <a name='Changelog'></a>Changelog
 
-- v 0.1.1
-Updated to change transient length to 0.
+- v0.1.1 : Updated to change transient length to 0.
 
-- v 0.1.0 
-Initial
+- v0.1.0 : Initial
