--- a/wp-plugin__oauth--gCAL/index.mdx
+++ b/wp-plugin__oauth--gCAL/index.mdx
@@ -11,19 +11,18 @@ desc:  "ACF oAuth Button for google Calendar"
 
 <div align="center">
 
-<div>
 <img src="https://svg-rewriter.sachinraja.workers.dev/?url=https%3A%2F%2Fcdn.jsdelivr.net%2Fnpm%2F%40mdi%2Fsvg%406.7.96%2Fsvg%2Fcalendar-month.svg&fill=%23FACC15&width=200px&height=200px" style="width:200px;" />
 
 <h3 align="center">Google Calendar OAuth Button</h3>
 
 <p align="center">
     New component for ACF. Connects to Google OAuth for access to Google Calendar.
-</p>    
+</p>
 </div>
 
 ##  1. <a name='TableofContents'></a>Table of Contents
 
-
+<!-- vscode-markdown-toc -->
 * 1. [Table of Contents](#TableofContents)
 * 2. [About The Project](#AboutTheProject)
 	* 2.1. [Built With / Dependencies](#BuiltWithDependencies)
@@ -37,6 +36,11 @@ desc:  "ACF oAuth Button for google Calendar"
 * 7. [Contact](#Contact)
 * 8. [Changelog](#Changelog)
 
+<!-- vscode-markdown-toc-config
+	numbering=true
+	autoSave=true
+	/vscode-markdown-toc-config -->
+<!-- /vscode-markdown-toc -->
 
 
 ##  2. <a name='AboutTheProject'></a>About The Project
