--- a/blog/index.mdx
+++ b/blog/index.mdx
@@ -11,7 +11,7 @@ desc:  "Markdown content source for IORoot.com"
 
 <div align="center">
 
-<img src="https://svg-rewriter.sachinraja.workers.dev/?url=https%3A%2F%2Fcdn.jsdelivr.net%2Fnpm%2F%40mdi%2Fsvg%406.7.96%2Fsvg%2Fbook-open.svg&fill=%23FACC15&width=200px&height=200px" style="width:200px;"/>
+<img src="https://svg-rewriter.sachinraja.workers.dev/?url=https%3A%2F%2Fcdn.jsdelivr.net%2Fnpm%2F%40mdi%2Fsvg%406.7.96%2Fsvg%2Fbook-open-page-variant.svg&fill=%23FACC15&width=200px&height=200px" style="width:200px;"/>
 
 <h3 align="center">Posts & Projects for IORoot.com</h3>
 
